# marshmallow-i18n-messages

./: .gitignore  README.md  build.sh  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  manual.yaml  push.yaml
marshmallow_i18n_messages/: ext.py  extract_translations.py  marshmallow_iterator.py  patch_marshmallow.py
marshmallow_i18n_messages/translations/: messages.pot
marshmallow_i18n_messages/translations/cs/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py  test_czech_translation_messages.py
