[metadata]
name = marshmallow_i18n_messages
version = 0.1.0
author = Miroslav Simek
author_email = miroslav.simek@cesnet.cz
description = A hack to translate marshmallow messages via GNU gettext
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oarepo/marshmallow-i18n-messages
project_urls =
    Bug Tracker = https://github.com/oarepo/marshmallow-i18n-messages/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    marshmallow
    marshmallow-utils
    babel
    speaklater

[options.extras_require]
test =
    pytest
dev =
    polib

[options.packages.find]
exclude =
    tests